[gd_scene load_steps=3 format=2]

[ext_resource path="res://game_modes/Meteorites/MeteoritesGameMode.gd" type="Script" id=1]
[ext_resource path="res://actors/Protectable/Protectable.tscn" type="PackedScene" id=2]

[node name="MeteoritesGameMode" type="Node2D"]
script = ExtResource( 1 )

[node name="Protectable" parent="." instance=ExtResource( 2 )]
position = Vector2( 240, 137 )

[node name="SpawnThreatTimer" type="Timer" parent="."]

[connection signal="threat_entered" from="Protectable" to="." method="_on_Protectable_threat_entered"]
[connection signal="timeout" from="SpawnThreatTimer" to="." method="_on_SpawnThreatTimer_timeout"]
